# openruscli

./: .env.example  Cargo.toml  docker-compose.yml
src/: main.rs
src/adapters/: mod.rs
src/adapters/llm/: mod.rs  ollama_adapter.rs  openrouter_adapter.rs
src/adapters/persistence/: filesystem_session_repository.rs  mod.rs
src/adapters/tools/: filesystem_skill.rs  git_skill.rs  github_adapter.rs  mod.rs  planning_skill.rs
src/application/: mod.rs
src/application/use_cases/: mod.rs  process_prompt.rs
src/domain/: mod.rs  model.rs  vo.rs
src/infrastructure/: cli.rs  config.rs
src/ports/: llm_provider.rs  mod.rs  session_repository.rs  skill_provider.rs  tool_provider.rs
src/shared/: error.rs
