[package]
name = "open-cliru"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full", "process"] }
tokio-stream = "0.1"
rustyline = "18.0.0"
ulid = { version = "1.2.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.77"
futures = "0.3"
async-stream = "0.3"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
dotenv = "0.15"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
walkdir = "2.3"
